# nuosc-explorer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nuosc_explorer/: __init__.py  app.py  cli.py  panels.py  style.py
