[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nuosc-explorer"
version = "0.1.0"
description = "Interactive neutrino-oscillation explorer (probabilities, NSI, autodiff analyses) built on jaxnu"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laura Munteanu" }]
keywords = ["neutrino", "oscillation", "jax", "jaxnu", "NSI", "gui"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.20",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pillow>=9",
]

[project.optional-dependencies]
# jaxnu is not on PyPI; install it from git (see README)
jaxnu = ["jaxnu @ git+https://github.com/pgranger23/jaxnu-osc.git"]
dev = ["pytest>=7"]

[project.scripts]
nuosc-explorer = "nuosc_explorer.cli:main"

[project.urls]
Homepage = "https://github.com/YOURUSER/nuosc-explorer"
Issues = "https://github.com/YOURUSER/nuosc-explorer/issues"

[tool.setuptools.packages.find]
include = ["nuosc_explorer*"]
